Prevent forced dark mode.

--- a/src/global-styles.css
+++ b/src/global-styles.css
@@ -31,6 +31,8 @@ html{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color-scheme: light;
+  forced-color-adjust: none;
 }
 
 body {
